# eleicoes_municipais

./: pyproject.toml
data/: eleicoes_2016_2020.csv  eleicoes_caicara_2016_2020.csv  local_votacao.csv  local_votacao_2016.csv  local_votacao_2020.csv  votacao.csv  votacao_secao_2016_final.csv  votacao_secao_2020_final.csv  zona_secao_eleitoral.csv
notebook/: Untitled.ipynb  _final.ipynb  _transform.ipynb  eleicoes_2016.ipynb  eleicoes_2020.ipynb  transform_csv_final.ipynb  zona_secao_eleicao_2016.ipynb  zona_secao_eleicao_2020.ipynb  zonas_eleitorais.ipynb
