[tool.poetry]
name = "eleicoes_municipais"
version = "0.1.0"
description = ""
authors = ["Matheus Conrado <matheus.conrado@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.0.0"
notebook = "^6.5.1"
jupyterlab = "^3.4.8"
pandas = "^1.5.0"
dask = "^2022.10.0"
fastparquet = "^0.8.3"
pyarrow = "^9.0.0"
lxml = "^4.9.1"
geopy = "^2.2.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
