[tool.poetry]
name = "eleicoes-municipais"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "eleicoes_municipais"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.1"
jupyter = "^1.0.0"
notebook = "^6.5.2"
jupyterlab = "^3.5.0"
sqlalchemy = "^1.4.43"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
